//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/field_mask.proto";
import "private/v1/virtual_machine_template_type.proto";

message VirtualMachineTemplatesListRequest {
  optional int32 offset = 1;
  optional int32 limit = 2;
  optional string filter = 3;
}

message VirtualMachineTemplatesListResponse {
  optional int32 size = 1;
  optional int32 total = 2;
  repeated VirtualMachineTemplate items = 3;
}

message VirtualMachineTemplatesGetRequest {
  string id = 1;
}

message VirtualMachineTemplatesGetResponse {
  VirtualMachineTemplate object = 1;
}

message VirtualMachineTemplatesCreateRequest {
  VirtualMachineTemplate object = 1;
}

message VirtualMachineTemplatesCreateResponse {
  VirtualMachineTemplate object = 1;
}

message VirtualMachineTemplatesDeleteRequest {
  string id = 1;
}

message VirtualMachineTemplatesDeleteResponse {}

message VirtualMachineTemplatesUpdateRequest {
  VirtualMachineTemplate object = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message VirtualMachineTemplatesUpdateResponse {
  VirtualMachineTemplate object = 1;
}

service VirtualMachineTemplates {
  rpc List(VirtualMachineTemplatesListRequest) returns (VirtualMachineTemplatesListResponse) {}
  rpc Get(VirtualMachineTemplatesGetRequest) returns (VirtualMachineTemplatesGetResponse) {}
  rpc Create(VirtualMachineTemplatesCreateRequest) returns (VirtualMachineTemplatesCreateResponse) {}
  rpc Delete(VirtualMachineTemplatesDeleteRequest) returns (VirtualMachineTemplatesDeleteResponse) {}
  rpc Update(VirtualMachineTemplatesUpdateRequest) returns (VirtualMachineTemplatesUpdateResponse) {}
}
